2005-01-10  H.J. Lu  <hongjiu.lu@intel.com>

	* write.c (write_object_file): Disallow a symbol equated to
	common symbol.

2005-01-10  Inderpreet Singh <inderpreetb@noida.hcltech.com>

	* tc-maxq.c: Replace constants 10 and 20 with bfd_mach_maxq10 and
	bfd_mach_maxq20.
	(md_pseudo_table): Add new pseudo ops for maxq10 and maxq20.
	(maxq_target): New function: Set the machine type.

2005-01-06  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (FPU_DEFAULT): Define for TE_VXWORKS.
	(md_begin): Handle TE_VXWORKS for FP defaults.
	(md_apply_fix3): Correct rela offsets.
	(elf32_arm_target_format): Add VxWorks targets.

2005-01-06  Paul Brook  <paul@codesourcery.com>

	* configure.tgt: Set em=vxworks for *-*-vxworks.
	* config/te-vxworks.h: New File.

2005-01-06  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_cpus): Correct arch field for arm1026ej-s.

2005-01-04  Dmitry Diky  <diwil@spec.ru>

	* config/tc-msp430.c (md_apply_fix3): Fix offset calculation for
	global label.

2005-01-03  David Mosberger  <davidm@hpl.hp.com>

	* config/tc-ia64.c (md): Add member "loc_directive_seen".
	(dot_loc): New function.
	(md_pseudo_table): Add entry to map .loc to dot_loc().
	(emit_one_bundle): Only call dwarf2_gen_line_info() if we have
	seen a .loc directive or we're generating DWARF2 debug info for
	assembly source.

2004-12-29  Alan Modra  <amodra@bigpond.net.au>

	PR gas/619
	* read.c (s_comm_internal): Don't zero end of name until size
	expression has been parsed.

2004-12-25  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* config/tc-avr.c (mcu_types): Move attiny{13,2313} from avr4 to avr2.

2004-12-23  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c: Support 'bcop' relaxation (dealt as in 'cmp&branch'
	case).

2004-12-22  Ian Lance Taylor  <ian@airs.com>

	* configure.tgt: New.
	* configure.in: Move setting of cpu_type, fmt, etc., to
	configure.tgt.
	* Makefile.am (CONFIG_STATUS_DEPENDENCIES): Add
	$(srcdir)/configure.tgt.