@@ -1,3 +1,8 @@
+2005-01-12  Nick Clifton  <nickc@redhat.com>
+
+	* config/tc-iq2000.c (s_iq2000_set): Fix thinko parsing
+	ignored_arguments array.
+
 2005-01-10  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* write.c (write_object_file): Disallow a symbol equated to
